# PET_DJANGO

./: .env.example  .gitattributes  .gitignore  README.md  manage.py  pyproject.toml  render.yaml
apps/pets/: admin.py  template_urls.py  urls.py
apps/pets/factories/: __init__.py  pet_factory.py
apps/pets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_petimage_options_petimage_is_cover.py  0004_pet_original_owner.py  0005_pet_size_pet_species_pet_species_other.py  0006_backfill_species_cachorro.py  0007_pet_sex_alter_pet_species_alter_pet_species_other.py  0008_backfill_nala_sex_femea.py  0009_remove_pet_species_other_alter_pet_species.py
apps/pets/models/: __init__.py  pet.py
apps/pets/repositories/: __init__.py  pet_repository.py
apps/pets/serializers/: __init__.py  pet_serializers.py
apps/pets/services/: __init__.py  pet_service.py
apps/pets/tests/: test_pets.py
apps/pets/views/: pet_views.py  template_views.py
apps/users/: admin.py  template_urls.py  urls.py
apps/users/factories/: __init__.py  user_factory.py
apps/users/migrations/: 0001_initial.py  0002_notification.py
apps/users/models/: __init__.py  notification.py  user.py
apps/users/repositories/: __init__.py  (+2 more)
core/: exceptions.py  settings.py  urls.py  wsgi.py
docs/: planejamento.md
patterns/: singleton.py
patterns/strategies/: image_strategy.py  validation_strategy.py
static/css/: style.css
templates/: about.html  base.html  home.html
templates/pets/: create.html  detail.html  list.html  my_pets.html
templates/users/: login.html  profile.html  register.html
(+10 files in other folders)
